...
        imageView.layer.borderColor = UIColor.lightGray.cgColor
        return imageView
    }
    
    func makeNameLabel() -> UILabel {
        let label = UILabel()
        label.accessibilityIdentifier = "pokemonName"
        label.font = .systemFont(ofSize: 14, weight: .heavy)
        label.textColor = .navy
        return label
    }
    
    func makeTypesStackView() -> UIStackView {
...
